Lab 8 - Fix train-test splits

--- a/F20DL_Lab8.ipynb
+++ b/F20DL_Lab8.ipynb
@@ -35,9 +35,10 @@
     "import numpy as np\n",
     "import os\n",
     "import pandas as pd\n",
+    "import math\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn import metrics\n",
+    "from sklearn.model_selection import train_test_split, cross_val_score\n",
+    "from sklearn.metrics import accuracy_score\n",
     "\n",
     "# to make this notebook's output stable across runs\n",
     "np.random.seed(42)\n",
@@ -60,20 +61,7 @@
    "execution_count": 2,
    "id": "36ca6875",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: './datasets/smiley_X.npy'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [2]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Load the dataset into numpy arrays\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m images \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m./datasets/smiley_X.npy\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      3\u001b[0m labels \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mload(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m./datasets/smiley_Y.npy\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "File \u001b[1;32m~\\anaconda3\\lib\\site-packages\\numpy\\lib\\npyio.py:417\u001b[0m, in \u001b[0;36mload\u001b[1;34m(file, mmap_mode, allow_pickle, fix_imports, encoding)\u001b[0m\n\u001b[0;32m    415\u001b[0m     own_fid \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[0;32m    416\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m--> 417\u001b[0m     fid \u001b[38;5;241m=\u001b[39m stack\u001b[38;5;241m.\u001b[39menter_context(\u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mos_fspath\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mrb\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m)\n\u001b[0;32m    418\u001b[0m     own_fid \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[0;32m    420\u001b[0m \u001b[38;5;66;03m# Code to distinguish from NumPy binary files and pickles.\u001b[39;00m\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: './datasets/smiley_X.npy'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load the dataset into numpy arrays\n",
     "images = np.load(\"./datasets/smiley_X.npy\")\n",
@@ -82,20 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a7590bfa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Shows smiley as an image. 'smiley' should be an element in 'images'\n",
-    "def show_smiley(smiley):\n",
-    "    plt.figure(figsize=(2,2))\n",
-    "    plt.imshow(smiley, cmap=\"Greys\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "53ae9ed5",
    "metadata": {},
    "outputs": [],
@@ -107,24 +82,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c3d575d4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Duplicate int Datasets\n",
-    "X2 = X.copy()\n",
-    "y2 = y.copy()\n",
-    "X3 = X.copy()\n",
-    "y3 = y.copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "37ce736d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# data is a list of all images. Images are represented as a flattened row of pixel values.\n",
     "# To get pixel (r, c) of image i, use X[i-1][9*(r-1) + (c-1)] \n",
@@ -138,6 +110,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "a7590bfa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Shows smiley as an image. 'smiley' should be an element in 'images'\n",
+    "def show_smiley(smiley):\n",
+    "    plt.figure(figsize=(2,2))\n",
+    "    plt.imshow(smiley, cmap=\"Greys\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "ddd3e412",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Shifts a percentage of instances from the training set to the test set and returns the new training and test sets\n",
+    "def shift_instances(d_train, d_test, t_train, t_test, percent):    \n",
+    "    shift_count = math.ceil(percent * d_train.shape[0])    # No. of instances to shift\n",
+    "\n",
+    "    # Shift first x% of samples to test set\n",
+    "    new_d_train = d_train[shift_count:]\n",
+    "    new_d_test = np.concatenate((d_test, d_train[:shift_count]))\n",
+    "    new_t_train = t_train[shift_count:]\n",
+    "    new_t_test = np.concatenate((t_test, t_train[:shift_count]))\n",
+    "    return (new_d_train, new_d_test, new_t_train, new_t_test)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "d307df3c",
    "metadata": {},
@@ -147,26 +151,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3b3384ce",
+   "execution_count": 7,
+   "id": "1065f92f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=1) # 70% training and 30% test"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f8ddb175",
-   "metadata": {},
-   "source": [
-    "# Tree 1"
+    "### Tree 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "60969e74",
+   "execution_count": 8,
+   "id": "3b3384ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training samples: 100, Testing samples: 44\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=1) # 70% training and 30% test\n",
+    "print(\"Training samples: %i, Testing samples: %i\" % (X_train.shape[0], X_test.shape[0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "de360407",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,17 +192,95 @@
     "classifier = classifier.fit(X_train,y_train)\n",
     "\n",
     "#Predict the response for test dataset\n",
-    "y_pred = classifier.predict(X_test)"
+    "y_pred = classifier.predict(X_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "611b61a8",
+   "execution_count": 10,
+   "id": "9b35b2c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy_score(y_train, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "40392ea9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1., 1., 1., 1., 1., 1., 1., 1., 1., 1.])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cross_val_score(classifier, X_train, y_train, cv=10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f8ddb175",
+   "metadata": {},
+   "source": [
+    "### Tree 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "60969e74",
    "metadata": {},
    "outputs": [],
    "source": [
-    "metrics.accuracy_score(y_test, y_pred)"
+    "# Create Decision Tree classifer object\n",
+    "classifier1 = DecisionTreeClassifier()\n",
+    "\n",
+    "# Train Decision Tree Classifer\n",
+    "classifier1 = classifier1.fit(X_train,y_train)\n",
+    "\n",
+    "#Predict the response for test dataset\n",
+    "y1_pred = classifier1.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "611b61a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy_score(y_test, y1_pred)"
    ]
   },
   {
@@ -195,22 +288,32 @@
    "id": "7d3b72b9",
    "metadata": {},
    "source": [
-    "# Tree 2"
+    "### Tree 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "c18a4bde",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training samples: 70, Testing samples: 74\n"
+     ]
+    }
+   ],
    "source": [
-    "X2_train, X2_test, y2_train, y2_test = train_test_split(X2, y2, test_size=0.6, random_state=1) # 40% training and 60% test"
+    "# Shift 30% of original training data to test set\n",
+    "X2_train, X2_test, y2_train, y2_test = shift_instances(X_train, X_test, y_train, y_test, 0.3)\n",
+    "print(\"Training samples: %i, Testing samples: %i\" % (X2_train.shape[0], X2_test.shape[0]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "e2ed1ccf",
    "metadata": {},
    "outputs": [],
@@ -227,12 +330,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "c52b5d43",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "metrics.accuracy_score(y2_test, y2_pred)"
+    "accuracy_score(y2_test, y2_pred)"
    ]
   },
   {
@@ -240,22 +354,32 @@
    "id": "45bec5a4",
    "metadata": {},
    "source": [
-    "# Tree 3"
+    "### Tree 3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "48b6a4c0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training samples: 40, Testing samples: 104\n"
+     ]
+    }
+   ],
    "source": [
-    "X3_train, X3_test, y3_train, y3_test = train_test_split(X3, y3, test_size=0.9, random_state=1) # 10% training and 90% test"
+    "# Shift 60% of original training data to test set\n",
+    "X3_train, X3_test, y3_train, y3_test = shift_instances(X_train, X_test, y_train, y_test, 0.6)\n",
+    "print(\"Training samples: %i, Testing samples: %i\" % (X3_train.shape[0], X3_test.shape[0]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "7ac03e14",
    "metadata": {},
    "outputs": [],
@@ -271,23 +395,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "7f5efce7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy_score(y3_test, y3_pred)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "5a2936bb",
    "metadata": {},
    "source": [
     "## Random Forest Trees"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "85ca0ede",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "metrics.accuracy_score(y3_test, y3_pred)"
    ]
   },
   {
@@ -300,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "2f168972",
    "metadata": {},
    "outputs": [],
@@ -316,12 +449,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "b153fe48",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "metrics.accuracy_score(y_test, RFy_pred)"
+    "accuracy_score(y_test, RFy_pred)"
    ]
   },
   {
@@ -334,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "93476033",
    "metadata": {},
    "outputs": [],
@@ -348,12 +492,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "98b6bdd0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "metrics.accuracy_score(y2_test, RFy2_pred)"
+    "accuracy_score(y2_test, RFy2_pred)"
    ]
   },
   {
@@ -366,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "78d359a5",
    "metadata": {},
    "outputs": [],
@@ -380,12 +535,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "8c96987a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "metrics.accuracy_score(y3_test, RFy3_pred)"
+    "accuracy_score(y3_test, RFy3_pred)"
    ]
   }
  ],
@@ -405,7 +571,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
