--- a/F20DL_Lab9.ipynb
+++ b/F20DL_Lab9.ipynb
@@ -176,6 +176,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "33949fd5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The classifier has no error on the training set so the training set is likely linearly separable. There is some error on\n",
+    "# the testing set so the classifier does not generalise well to new data, given the training set.\n",
+    "# This is likely a case of underfitting since the training set is very small. At larger training set sizes, the error on\n",
+    "# the test set is 0. This means the classiifier can generalise well to new data if given a larger training set."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "a1a41d6b",
    "metadata": {},
@@ -185,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "b16fe4e0",
    "metadata": {},
    "outputs": [],
@@ -203,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "17bcf415",
    "metadata": {},
    "outputs": [
@@ -239,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "c9e09bf4",
    "metadata": {},
    "outputs": [
@@ -285,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "2008c30f",
    "metadata": {},
    "outputs": [
@@ -331,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "2b862bce",
    "metadata": {},
    "outputs": [
@@ -393,7 +406,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eba9b88f",
+   "id": "c9dd5290",
    "metadata": {},
    "outputs": [],
    "source": []
